force-app/main/default/objects/Stock_Transfer__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Stock_Location__c</referenceTo>
    <relationshipLabel>Stock Transfers (Destination)</relationshipLabel>
    <relationshipName>Stock_Transfers_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>