force-app/main/default/objects/Stock_Transfer__c/fields/Estimated_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Arrival_Date__c</fullName>
    <label>Estimated Arrival Date</label>
    <type>Date</type>
</CustomField>