force-app/main/default/objects/Stock_Transfer__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <referenceTo>Stock_Location__c</referenceTo>
    <relationshipLabel>Stock Transfers (Origin)</relationshipLabel>
    <relationshipName>Stock_Transfers_Origin</relationshipName>
    <type>Lookup</type>
</CustomField>